--- a/package.json
+++ b/package.json
@@ -11,12 +11,18 @@
     "@types/node": "^16.18.35",
     "@types/react": "^18.2.11",
     "@types/react-dom": "^18.2.4",
+    "@types/react-redux": "^7.1.27",
     "@types/react-router-dom": "^5.3.3",
+    "@types/redux-thunk": "^2.1.0",
     "@types/styled-components": "^5.1.26",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-query": "^3.39.3",
     "react-redux": "^8.0.7",
     "react-scripts": "5.0.1",
+    "recoil": "^0.7.7",
+    "redux-saga": "^1.2.3",
+    "redux-thunk": "^2.4.2",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -45,6 +51,7 @@
     ]
   },
   "devDependencies": {
+    "@types/recoil": "^0.0.9",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jsx-a11y": "^6.7.1",
