--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@types/react-redux": "^7.1.27",
     "@types/react-router-dom": "^5.3.3",
     "@types/redux-thunk": "^2.1.0",
-    "@types/styled-components": "^5.1.26",
+    "@types/styled-components": "^5.1.28",
+    "eslint-import-resolver-typescript": "^3.6.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-query": "^3.39.3",
@@ -23,6 +24,8 @@
     "recoil": "^0.7.7",
     "redux-saga": "^1.2.3",
     "redux-thunk": "^2.4.2",
+    "styled-components": "^6.0.8",
+    "twin.macro": "^3.4.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -57,6 +60,7 @@
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.2",
-    "eslint-plugin-react-hooks": "^4.6.0"
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "tailwindcss": "^3.3.3"
   }
 }
