--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^18.2.0",
     "react-query": "^3.39.3",
     "react-redux": "^8.0.7",
+    "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
     "recoil": "^0.7.7",
     "redux-saga": "^1.2.3",
@@ -55,6 +56,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@types/recoil": "^0.0.9",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-import": "^2.27.5",
@@ -64,5 +66,8 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "tailwindcss": "^3.3.3"
   },
-  "homepage": "./"
+  "homepage": "./",
+  "_mouleAliases": {
+    "@src": "src"
+  }
 }
